tests/nala/error/runtime/assign-types.nl
mut num = 7;
num = 'hello';